content/sentinel/v0.13.x/content/sentinel/docs/commands/apply.mdx
---
page_title: 'Command: apply'
sidebar_title: '<code>apply</code>'
sidebar_current: docs-commands-apply
description: >-
  The `sentinel apply` command is used to execute a policy locally for
  development purposes.
layout: docs
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2023-01-01T00:00:00.000Z
last_modified: 2023-01-01T00:00:00.000Z
# END AUTO GENERATED METADATA
---

# Command: `apply`

The `sentinel apply` command is used to execute a policy locally for development
purposes.

## Usage

Usage: `sentinel apply [options] POLICY`

This command executes the policy file at the path specified by POLICY.

Use the exit code of this command to determine the exact status of the policy
evaluation. `0` is pass, `1` is fail, `2` is undefined (fail, but because the
result was undefined), and `3` is a runtime error. Errors unrelated to the
policy status itself are returned with an exit status of `9`.

To control the behavior of the `apply` command, create a [configuration
file](/sentinel/commands/config). With this, you can define available
[import plugins](/sentinel/concepts/imports), mock data, and global values.
This can help you simulate a policy embedded within an application.

The command-line flags are all optional. The list of available flags are:

- `-config=path` - Path to a configuration file specifying available imports,
  mock data, globals, etc. The default is `sentinel.json`.

- `-global key=value` - Set global values. This is the same as setting `global`
  in the configuration file, and will override any of these respective values
  set in the configuration. The value is either a string, or a JSON number,
  array, or object. To force strings, use quotes.

- `-param key=value` - Set parameters, the same as setting `param` in the
  configuration file. Values are handled in the same way they are with the
  `-global` flag.

- `-trace` - Always show the execution trace. This shows intermediate
  boolean expression values. This always shows for failed policies.
